# dexter.ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.agent  Dockerfile.server  Dockerfile.web  README.docker.md  README.md  design-doc.md  dexter.sh  docker-compose.yml  package.json  roadmap.md  sequence-diagrams.md  setup.sh  use-cases.md
.docker/: Dockerfile.agent  docker-compose.yml
.github/workflows/: docker.yml  lint.yml
agent/: .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  langgraph-dev.json  langgraph.json  pyproject.toml
agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/agent/: config.py  document_processor.py  main.py  rag.py  setup_index.py  tools.py
agent/faiss_index/: index.faiss
agent/faiss_index/index/: index.faiss  index.pkl
agent/src/: main.py  setup_index.py
agent/src/config/: __init__.py  config.py
agent/src/core/: document_processor.py  rag.py
agent/src/utils/: tools.py
scripts/: install_dev_tools.sh  test-db-setup.sh
server/: .prettierrc  eslint.config.js  eslint.config.mjs  package.json  prettier.config.js  tsconfig.json
server/.husky/: pre-commit
server/src/: index.ts
web/: .env.example  Dockerfile  drizzle.config.ts  eslint.config.mjs  next.config.js  package.json  tsconfig.json
web-new/: package.json  prettier.config.js
web-new/src/app/: page.tsx
web-new/src/trpc/: query-client.ts  react.tsx  server.ts
web/.husky/: pre-commit
web/src/: env.js  middleware.ts
(+41 files in other folders)
